2004-04-25  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/map.c (free_map_if_success): avoid dereferencing a pointer
	to potentially freed memory

2004-02-26  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-unknown-freebsd5.2.1.

2004-01-30  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* scripts/ctl-hlfsd.in: don't run hlfsd with -D fork

2004-01-25  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: sparc64-unknown-linux-deb3.0

	* config.guess.long: recoognize Debian Linux.

2004-01-22  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_tli.c (amu_get_myaddress): use
	htonl(INADDR_LOOPBACK) and define INADDR_LOOPBACK if not already
	available.

2004-01-21  Erez Zadok  <ezk@cs.sunysb.edu>

	* wire-test/wire-test.c, hlfsd/hlfsd.c (main): pass NULL as second
	parameter to amu_get_myaddress().

	* conf/transp/transp_tli.c (amu_get_myaddress): resolve value of
	localhost_address amd.conf parameter, if defined (else default to
	HOST_SELF_CONNECT).
	Removed htonl() around socket address copying (I think it was
	wrong) since plog("My IP address is...") in amd.c was printing
	addresses wrong on Solaris x86..

	* conf/transp/transp_sockets.c (amu_get_myaddress): comment out
	old DEBUG code that warns if 127.0.0.1 isn't the same as what
	get_myaddress() reports.  Add code to resolve value of
	localhost_address amd.conf parameter, if defined (else default to
	127.0.0.1).

	* amd/conf.c (gopt_localhost_address): new function to parse
	amd.conf parameter localhost_address.

	* amd/amd.h: global field to store amd.conf localhost_address
	parameter.

	* amd/amd.c (main): call amu_get_myaddress with global option,
	which could have been set in amd.conf.

	* NEWS, doc/am-utils.texi, scripts/amd.conf-sample,
	scripts/amd.conf.5: document new option localhost_address.

2004-01-20  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/conf.c (gopt_nfs_allow_insecure_port): support function for
	the new "nfs_allow_insecure_port" amd.conf directive
