@@ -1,3 +1,8 @@
+2004-04-27  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* amd/amfs_generic.c (amfs_lookup_one_mntfs): force FS_MKMNT on
+	the real mount of an autofs-based sublink
+
 2004-04-25  Ion Badulescu  <ionut@moisil.badula.org>
 
 	* amd/map.c (free_map_if_success): avoid dereferencing a pointer
